--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <!-- font -->
+    <link rel="stylesheet" href="./assets/font/stylesheet.css">
     <!-- reset css -->
     <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- main css -->
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-    <h1>Amazon</h1>
+    <!-- <nav>
+        <img src="./assets/img/amazon_logo.png" alt="">
+    </nav> -->
+    <p class="desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt aliquid modi nulla cum officiis voluptatum tenetur temporibus ipsum expedita aspernatur debitis, numquam officia quibusdam atque, esse autem, nostrum optio veritatis?</p>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
