--- a/index.html
+++ b/index.html
@@ -20,10 +20,61 @@
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-    <!-- <nav>
-        <img src="./assets/img/amazon_logo.png" alt="">
-    </nav> -->
-    <p class="desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt aliquid modi nulla cum officiis voluptatum tenetur temporibus ipsum expedita aspernatur debitis, numquam officia quibusdam atque, esse autem, nostrum optio veritatis?</p>
+    <main id="id">
+        <nav class="navigaton">
+            <!-- nav logo -->
+            <a href="">
+                <img class="logo" src="./assets/img/amazon_logo.png" alt="Logo">
+            </a>
+            <!-- nav country -->
+            <div class="nav-country">
+                <img class="location" src="./assets/img/location_icon.png" alt="">
+                <div>
+                    <p>Deliver to</p>
+                    <h1>VietNam</h1>
+                </div>
+            </div>
+            <!-- nav search -->
+            <div class="nav-search">
+                <div class="nav-search-gategory">
+                    <p>All</p>
+                    <img src="./assets/img/dropdown_icon.png" height="12" alt="">
+                </div>
+                <input class="nav-search-input" placeholder="Search Amazon" type="text" name="" id="">
+                <img src="./assets/img/search_icon.png" class="nav-search-icon" alt="">
+            </div>
+            <!-- nav language -->
+            <div class="nav-language">
+                <img src="./assets/img/us_flag.png" width="25px" alt="">
+                <p>EN</p>
+                <img src="./assets/img/dropdown_icon.png" width="8px" alt="">
+            </div>
+            <div class="nav-text">
+                <p>Hello, Sign in</p>
+                <h1>Account & Lists <img src="./assets/img/dropdown_icon.png" width="8px" alt=""></h1>
+            </div>
+            <div class="nav-text">
+                <p>Return</p>
+                <h1>& Orthers</h1>
+            </div>
+            <a href="" class="nav-cart">
+                <img src="./assets/img/cart_icon.png" width="35px" alt="">
+                <h4>Cart</h4>
+            </a>
+        </nav>
+        <div class="nav-bottom">
+            <div>
+                <img class="icon-menu" src="./assets/img/menu_icon.png" width="25px" alt="">
+                <p>All</p>
+            </div>
+            <a href="">Today`s Deals</a>
+            <a href="">Customer Service</a>
+            <a href="">Registry</a>
+            <a href="">Gift Cards</a>
+            <a href="">Sell</a>
+        </div>
+
+    </main>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
