--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <main id="id">
+        <!-- nav -->
         <nav class="navigaton">
             <!-- nav logo -->
             <a href="">
@@ -49,6 +50,7 @@
                 <p>EN</p>
                 <img src="./assets/img/dropdown_icon.png" width="8px" alt="">
             </div>
+            <!-- nav text -->
             <div class="nav-text">
                 <p>Hello, Sign in</p>
                 <h1>Account & Lists <img src="./assets/img/dropdown_icon.png" width="8px" alt=""></h1>
@@ -62,6 +64,7 @@
                 <h4>Cart</h4>
             </a>
         </nav>
+        <!-- nav bottom -->
         <div class="nav-bottom">
             <div>
                 <img class="icon-menu" src="./assets/img/menu_icon.png" width="25px" alt="">
@@ -74,6 +77,252 @@
             <a href="">Sell</a>
         </div>
 
+        <!-- header-slide -->
+        <div class="header-slider">
+            <a href="#" class="control_prev">&#129144</a>
+            <a href="#" class="control_next">&#129146</a>
+            <ul>
+                <img src="./assets/img/header1.jpg" alt="" class="header-img">
+                <img src="./assets/img/header2.jpg" alt="" class="header-img">
+                <img src="./assets/img/header3.jpg" alt="" class="header-img">
+                <img src="./assets/img/header4.jpg" alt="" class="header-img">
+                <img src="./assets/img/header5.jpg" alt="" class="header-img">
+                <img src="./assets/img/header6.jpg" alt="" class="header-img">
+            </ul>
+        </div>
+        <!-- box row 1-->
+        <div class="box-row header-box">
+            <div class="box-col">
+                <h3>Free international retunrs</h3>
+                <img src="./assets/img/box1-1.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Lunar New Year</h3>
+                <img src="./assets/img/box1-2.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div><div class="box-col">
+                <h3>Toy under $25</h3>
+                <img src="./assets/img/box1-3.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div><div class="box-col">
+                <h3>Deals in PCs</h3>
+                <img src="./assets/img/box1-4.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+        </div>
+        <!-- box row 2 -->
+        <div class="box-row">
+            <div class="box-col">
+                <h3>Grooming Products</h3>
+                <img src="./assets/img/box2-1.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Latest Devices</h3>
+                <img src="./assets/img/box2-2.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div><div class="box-col">
+                <h3>Pets Food</h3>
+                <img src="./assets/img/box2-3.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div><div class="box-col">
+                <h3>Fashion Mart</h3>
+                <img src="./assets/img/box2-4.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+        </div>
+
+        <!-- Product Slider -->
+        <div class="products-slider">
+            <h2>Best Sellers in Sport & Outdoors</h2>
+            <div class="products">
+                <a href="/product.html">
+                    <img src="./assets/img/product_img.jpg" alt="">
+                </a>
+                <img src="./assets/img/product1-1.jpg" alt="">
+                <img src="./assets/img/product1-2.jpg" alt="">
+                <img src="./assets/img/product1-3.jpg" alt="">
+                <img src="./assets/img/product1-4.jpg" alt="">
+                <img src="./assets/img/product1-5.jpg" alt="">
+                <img src="./assets/img/product1-6.jpg" alt="">
+                <img src="./assets/img/product1-7.jpg" alt="">
+                <img src="./assets/img/product1-8.jpg" alt="">
+                <img src="./assets/img/product1-9.jpg" alt="">
+                <img src="./assets/img/product1-10.jpg" alt="">
+            </div>
+        </div>
+
+        <!-- box row 3 -->
+        <div class="box-row">
+            <div class="box-col">
+                <h3>Statinery</h3>
+                <img src="./assets/img/box3-1.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Laptops for study</h3>
+                <img src="./assets/img/box3-2.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div><div class="box-col">
+                <h3>Office chairs</h3>
+                <img src="./assets/img/box3-3.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div><div class="box-col">
+                <h3>Gamming Monitor</h3>
+                <img src="./assets/img/box3-4.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+        </div>
+
+        <!-- product-slider-with-price -->
+        <div class="products-slider-with-price">
+            <h2>Deals Under $25</h2>
+            <div class="products">
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-1.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-2.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-3.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-4.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-5.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-6.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-7.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-8.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-9.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-10.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="products-slider">
+            <h2>Best Sellers in Sport & Outdoors</h2>
+            <div class="products">
+                <img src="./assets/img/product1-1.jpg" alt="">
+                <img src="./assets/img/product1-2.jpg" alt="">
+                <img src="./assets/img/product1-3.jpg" alt="">
+                <img src="./assets/img/product1-4.jpg" alt="">
+                <img src="./assets/img/product1-5.jpg" alt="">
+                <img src="./assets/img/product1-6.jpg" alt="">
+                <img src="./assets/img/product1-7.jpg" alt="">
+                <img src="./assets/img/product1-8.jpg" alt="">
+                <img src="./assets/img/product1-9.jpg" alt="">
+                <img src="./assets/img/product1-10.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="box-row">
+            <div class="box-col">
+                <h3>Statinery</h3>
+                <img src="./assets/img/box3-1.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Laptops for study</h3>
+                <img src="./assets/img/box3-2.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div><div class="box-col">
+                <h3>Office chairs</h3>
+                <img src="./assets/img/box3-3.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div><div class="box-col">
+                <h3>Gamming Monitor</h3>
+                <img src="./assets/img/box3-4.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+        </div>
+
+        <footer>
+            <img src="./assets/img/amazon_logo.png" width="100" alt="">
+            <p>© 1996-2024, Amazon.com, Inc. or its affiliates</p>
+        </footer>
     </main>
     <script src="./assets/js/main.js"></script>
 </body>
