creat product.js

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
             </div>
         </div>
 
+        <!-- Product Slider 2 -->
         <div class="products-slider">
             <h2>Best Sellers in Sport & Outdoors</h2>
             <div class="products">
@@ -298,6 +299,7 @@
             </div>
         </div>
 
+        <!-- Box row 4 -->
         <div class="box-row">
             <div class="box-col">
                 <h3>Statinery</h3>
@@ -318,7 +320,8 @@
                 <a href="/">Shop more</a>
             </div>
         </div>
-
+        
+        <!-- footer -->
         <footer>
             <img src="./assets/img/amazon_logo.png" width="100" alt="">
             <p>© 1996-2024, Amazon.com, Inc. or its affiliates</p>
