--- a/product.html
+++ b/product.html
@@ -75,8 +75,248 @@
             <a href="">Gift Cards</a>
             <a href="">Sell</a>
         </div>
+        <!--  -->
+        <p class="breadcrum">Video Games > PC > Accessries > Headset</p>
+        <!-- product display -->
+        <div class="product-display">
+            <div class="product-d-image">
+                <div class="product-icons">
+                    <img src="./assets/img/product_img.jpg" width="60" alt="">
+                    <img src="./assets/img/product_img.jpg" width="60" alt="">
+                    <img src="./assets/img/product_img.jpg" width="60" alt="">
+                    <img src="./assets/img/product_img.jpg" width="60" alt="">
+                    <img src="./assets/img/product_img.jpg" width="60" alt="">
+                </div>
+                <div class="product-main-image">
+                    <img src="./assets/img/product_img.jpg" width="400" alt="">
+                </div>
+            </div>
+            <div class="product-d-details">
+                <p class="product-title">BENGOO G9000 Stereo Gaming Headset for PS4 PC Xbox One PS5 Controller, Noise Cancelling Over Ear Headphones with Mic, LED Light, Bass Surround, Soft Memory Earmuffs (Blue)</p>
+                <p class="brand-store">Visit the BENGOO Store</p>
+                <div class="product-rating">
+                    <div>4.3 <img src="./assets/img/rating_img.png" height="20px" alt=""></div>
+                    <p> 105,857 ratings | Search this page</p>
+                    <p> <span>#1 Best Seller</span> in Xbox One Headsets</p>
+                    <h5>10K+ bought in past month</h5>
+                </div>
+                <hr>
+                <div class="product-d-price">
+                    <div class="price">
+                        <p>-35%</p>
+                        <h1>$<span>25</span>.99</h1>
+                    </div>
+                    <h5>List Price: <span>$39.99</span></h5>
+                    <p>Get <b>Fast, Free Shipping</b> with <span>Amazon Prime</span></p>
+                    <p><span>FREE Returns</span></p>
+                    <p><span>Join Prime to buy this item at $22.99</span></p>
+                    <p>Available at a lower price from <span>other sellers</span> that may not offer free Prime shipping</p>
 
-        
+                    <div class="product-d-selection">
+                        <p>Color: <b>Blue</b> </p>
+                        <div class="product-color-options">
+                            <div class="option">
+                                <img src="./assets/img/product_img.jpg" width="30px" alt="">
+                                <p>Black</p>
+                            </div>
+                            <div class="option">
+                                <img src="./assets/img/product_img.jpg" width="30px" alt="">
+                                <p>Green</p>
+                            </div>
+                            <div class="option">
+                                <img src="./assets/img/product_img.jpg" width="30px" alt="">
+                                <p>Pink</p>
+                            </div>
+                            <div class="option">
+                                <img src="./assets/img/product_img.jpg" width="30px" alt="">
+                                <p>Blue</p>
+                            </div>
+                            <div class="option">
+                                <img src="./assets/img/product_img.jpg" width="30px" alt="">
+                                <p>Purple</p>
+                            </div>
+                            <div class="option">
+                                <img src="./assets/img/product_img.jpg" width="30px" alt="">
+                                <p>Red</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-info">
+                        <p><b>Brand</b></p><p>BENGOO</p>
+                        <p><b>Model Name</b></p><p>G9000</p>
+                        <p><b>Color</b></p><p>Blue</p>
+                        <p><b>Form Factor</b></p><p>Over Ear</p>
+                        <p><b>Connectivity Technology</b></p><p>Wired</p>
+                    </div>
+                    <hr>
+                </div>
+                <div class="product-description">
+                    <h1>About this item</h1>
+                    <ul>
+                        <li>
+                            【Multi-Platform Compatible】Support PlayStation 4, New Xbox One, PC, Nintendo 3DS, Laptop, PSP, Tablet, iPad, Computer, Mobile Phone. Please note you need an extra Microsoft Adapter (Not Included) when connect with an old version Xbox One controller.
+                        </li>
+                        <li>
+                            【Surrounding Stereo Subwoofer】Clear sound operating strong brass, splendid ambient noise isolation and high precision 40mm magnetic neodymium driver, acoustic positioning precision enhance the sensitivity of the speaker unit, bringing you vivid sound field, sound clarity, shock feeling sound. Perfect for various games like Halo 5 Guardians, Metal Gear Solid, Call of Duty, Star Wars Battlefront, Overwatch, World of Warcraft Legion, etc.
+                        </li>
+                        <li>
+                            【Noise Isolating Microphone】Headset integrated onmi-directional microphone can transmits high quality communication with its premium noise-concellng feature, can pick up sounds with great sensitivity and remove the noise, which enables you clearly deliver or receive messages while you are in a game. Long flexible mic design very convenient to adjust angle of the microphone.
+                        </li>
+                        <li>
+                            【Great Humanized Design】Superior comfortable and good air permeability protein over-ear pads, muti-points headbeam, acord with human body engineering specification can reduce hearing impairment and heat sweat.Skin friendly leather material for a longer period of wearing. Glaring LED lights desigend on the earcups to highlight game atmosphere.
+                        </li>
+                        <li>
+                            【Effortlessly Volume Control】High tensile strength, anti-winding braided USB cable with rotary volume controller and key microphone mute effectively prevents the 49-inches long cable from twining and allows you to control the volume easily and mute the mic as effortless volume control one key mute.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="product-d-purchase">
+                <div class="title">
+                    <h3>Buy new:</h3> <img src="./assets/img/circle_icon.png" width="20px" alt="">
+                </div>
+                <h1 class="price">$<span>25.99</span></h1>
+                <div class="gap">
+                    <p>Get <b>Fast,Free Shipping</b> with <span>Amazon Prime</span> </p>
+                    <p><span>FREE Returns</span></p>
+                </div>
+                <div class="gap">
+                    <p><span>FREE delivery</span> <b>Saturday</b>,</p>
+                    <p><b>January 27</b>on orders shipped by Amazon over $35</p>
+                </div>
+                <div class="gap">
+                    <p>Or fastest delivery <b>Tomorrow</b>, <b>January 23</b>. Other within <span>10 hrs 56 mins</span></p>
+                </div>
+
+                <div class="delivery-location">
+                    <img src="./assets/img/location_icon_dark.png" width="20px" alt="">
+                    <p><span>Deliver to VietNam 27000</span></p>
+                </div>
+                <h2 class="product-stock">In Stock</h2>
+                <select class="product-quantity" name="" id="">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+                <button class="btn">Add to cart</button>
+                <button class="btn product-buy">Buy now</button>
+                <div class="product-seller-info">
+                    <p>Ships from</p> <p><span>Amazon</span></p>
+                    <p>Sold by</p> <p><span>Bengoo Inc</span></p>
+                    <p>Returns</p> <p><span>Eligible for Return, Refund or Replacement within 30 days of receipt</span></p>
+                    <p>Payment</p> <p><span>Secure transaction</span></p>
+                </div>
+                <hr>
+                <button class="product-add-list">Add to lists</button>
+            </div>
+        </div>
+        <!--  -->
+        <div class="products-slider-with-price">
+            <h2>Deals Under $25</h2>
+            <div class="products">
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-1.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-2.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-3.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-4.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-5.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-6.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-7.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-8.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-9.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-img-container">
+                        <img src="./assets/img/product2-10.jpg" alt="">
+                    </div>
+                    <div class="product-offer">
+                        <p>27% off</p> <span>Deal</span>
+                    </div>
+                    <p class = "product-price">$ <span>14.49</span>List Price: $19.95</p>
+                    <h4>This product is the best for you</h4>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="./assets/js/"></script>
 </body>
 </html>
