creat cart.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>Return</p>
                 <h1>& Orthers</h1>
             </div>
-            <a href="" class="nav-cart">
+            <a href="./cart.html" class="nav-cart">
                 <img src="./assets/img/cart_icon.png" width="35px" alt="">
                 <h4>Cart</h4>
             </a>
