--- a/product.html
+++ b/product.html
@@ -75,7 +75,7 @@
             <a href="">Gift Cards</a>
             <a href="">Sell</a>
         </div>
-        <!--  -->
+        <!-- breadcrum -->
         <p class="breadcrum">Video Games > PC > Accessries > Headset</p>
         <!-- product display -->
         <div class="product-display">
@@ -210,7 +210,7 @@
                 <button class="product-add-list">Add to lists</button>
             </div>
         </div>
-        <!--  -->
+        <!--products-slider-with-price -->
         <div class="products-slider-with-price">
             <h2>Deals Under $25</h2>
             <div class="products">
@@ -316,7 +316,12 @@
                 </div>
             </div>
         </div>
+           <!-- footer -->
+        <footer class="product-footer">
+            <img src="./assets/img/amazon_logo.png" width="100" alt="">
+            <p>© 1996-2024, Amazon.com, Inc. or its affiliates</p>
+        </footer>
     </div>
-    <script src="./assets/js/"></script>
+    <script src="./assets/js/product.js"></script>
 </body>
 </html>
