--- a/cart.html
+++ b/cart.html
@@ -75,6 +75,112 @@
             <a href="">Gift Cards</a>
             <a href="">Sell</a>
         </div>
+
+        <div class="cart">
+            <div class="cart-left">
+                <h1>Shopping cart</h1>
+                <hr>
+                <!-- product-cart-list1 -->
+                <div class="product-cart-list">
+                    <img src="./assets/img/ipad_img.jpg" width="180px" alt="">
+                    <div>
+                        <div class="product-cart-titleprice">
+                            <p>Apple iPad (9th Generation): with A13 Bionic chip, 10.2-inch Retina Display, 64GB, Wi-Fi, 12MP front/8MP Back Camera, Touch ID, All-Day Battery Life – Silver</p>
+                            <p><b>$220.01</b></p>
+                        </div>
+                        <p class="product-cart-bestseller">
+                            <span>#1 Best Seller</span> in Computer Tablets
+                         </p>
+                         <p class="product-cart-stock">In Stock</p>
+                         <p class="product-cart-delivery">FREE delivery Mon, Jan 29 available at checkout</p>
+                         <p class="product-card-returns">FREE returns &#11191</p>
+                         <p class="product-cart-giftoption">Gift options not available. <span>Learn more</span> </p>
+
+                        <div class="product-cart-specs">
+                            <p><b>Style: </b></p> <p>Wifi</p>
+                            <p><b>Size: </b></p> <p>64GB</p>
+                            <p><b>Color: </b></p> <p>Space Gray</p>
+                        </div>
+
+                        <div class="cart-list-action">
+                            <select name="" id="">
+                                <option value="1">Qty: 1</option>
+                                <option value="2">Qty: 2</option>
+                                <option value="3">Qty: 3</option>
+                                <option value="4">Qty: 4</option>
+                                <option value="5">Qty: 5</option>
+                            </select>
+                            <hr>
+                            <p class="action-btn">Delete</p>
+                            <hr>
+                            <p class="action-btn">Save for later</p>
+                            <hr>
+                            <p class="action-btn">Compare with similar items</p>
+                            <hr>
+                            <p class="action-btn">Share</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <!-- product-cart-list2 -->
+                <div class="product-cart-list">
+                    <img src="./assets/img/product_img.jpg" width= "180px" alt="">
+                    <div>
+                        <div class="product-cart-titleprice">
+                            <p>BENGOO G9000 Stereo Gaming Headset for PS4 PC Xbox One PS5 Controller, Noise Cancelling Over Ear Headphones with Mic, LED Light, Bass Surround, Soft Memory Earmuffs (Blue)</p>
+                            <p><b>$25.99</b></p>
+                        </div>
+                        <p class="product-cart-bestseller">
+                            <span>#1 Best Seller</span> i in Xbox One Headsets
+                         </p>
+                         <p class="product-cart-stock">In Stock</p>
+                         <p class="product-cart-delivery">FREE delivery Mon, Jan 29 available at checkout</p>
+                         <p class="product-card-returns">FREE returns &#11191</p>
+                         <p class="product-cart-giftoption">Gift options not available. <span>Learn more</span> </p>
+
+                        <div class="product-cart-specs">
+                            <p><b>Style: </b></p> <p>Wired</p>
+                            <p><b>Size: </b></p> <p>Free</p>
+                            <p><b>Color: </b></p> <p>Blue</p>
+                        </div>
+                        <div class="cart-list-action">
+                            <select name="" id="">
+                                <option value="1">Qty: 1</option>
+                                <option value="2">Qty: 2</option>
+                                <option value="3">Qty: 3</option>
+                                <option value="4">Qty: 4</option>
+                                <option value="5">Qty: 5</option>
+                            </select>
+                            <hr>
+                            <p class="action-btn">Delete</p>
+                            <hr>
+                            <p class="action-btn">Save for later</p>
+                            <hr>
+                            <p class="action-btn">Compare with similar items</p>
+                            <hr>
+                            <p class="action-btn">Share</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="cart-list-subtotal">
+                    Subtotal (2 items): <b>$274.99</b>
+                </div>
+            </div>
+            <div class="cart-right">
+                <div class="cart-free-delivery">
+                    <p>&#x2705</p>
+                    <p>Your order qualifies for FREE Shipping. <b>Choose this option at checkout.</b> See details</p>
+                </div>
+                <p class="cart-subtotal"> Subtotal (2 items): <b>$274.99</b></p>
+                <p class="cart-right-gift"> <input type="checkbox"> This order contains a gift</p>
+                <button>Proceed to checkout</button>
+            </div>
+        </div>
     </div>
+    <footer class="cart-footer">
+        <img src="./assets/img/amazon_logo.png" width="100" alt="">
+        <p>© 1996-2024, Amazon.com, Inc. or its affiliates</p>
+    </footer>
 </body>
 </html>
