comment cart.html

--- a/cart.html
+++ b/cart.html
@@ -76,7 +76,9 @@
             <a href="">Sell</a>
         </div>
 
+        <!-- cart -->
         <div class="cart">
+            <!-- cart left -->
             <div class="cart-left">
                 <h1>Shopping cart</h1>
                 <hr>
@@ -167,6 +169,7 @@
                     Subtotal (2 items): <b>$274.99</b>
                 </div>
             </div>
+            <!-- cart right -->
             <div class="cart-right">
                 <div class="cart-free-delivery">
                     <p>&#x2705</p>
@@ -178,6 +181,7 @@
             </div>
         </div>
     </div>
+    <!-- cart footer -->
     <footer class="cart-footer">
         <img src="./assets/img/amazon_logo.png" width="100" alt="">
         <p>© 1996-2024, Amazon.com, Inc. or its affiliates</p>
