--- a/signin.html
+++ b/signin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign In</title>
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
@@ -20,6 +20,35 @@
     <link rel="stylesheet" href="./assets/css/signin.css">
 </head>
 <body>
+    <a href="">
+        <img class="logo" src="./assets/img/amazon_logo_dark.png" width="100px" alt="">
+    </a>
+    <div class="signin-container">
+        <h1 class="signin-title">Sign in</h1>
+        <h5 class="input-lable">Email or mobile phone number</h5>
+        <input type="text">
+        <button>Continue</button>
+        <p class="signin-condition">By continuing, you agree to Amazon's <span>Condition of Use</span> and <span>Privacy Notice</span></p>
+        <p class="signin-help">&#9656 Need help ?</p>
+        <hr>
+        <h4 style="font-weight: 600;">Buying for work ?</h4>
+        <p class="signin-business"><span>Shop on Amazon Business</span></p>
+    </div>
+    <div class="signin-bottom">
+        <hr>
+        <p>New to Amazon</p>
+        <hr>
+    </div>
+    <button class="signin-signup-btn">Creat your Amazon account</button>
     
+    <!-- footer -->
+    <footer class="footer">
+        <div class="footer-link">
+            <a href="#">Conditions of Use</a>
+            <a href="#">Privacy Notice</a>
+            <a href="#">Help</a>
+        </div>
+        <p class="footer-copyright">© 1996-2024, Amazon.com, Inc. or its affiliates</p>
+    </footer>
 </body>
 </html>
