--- a/product.html
+++ b/product.html
@@ -51,7 +51,7 @@
             </div>
             <!-- nav text -->
             <div class="nav-text">
-                <p>Hello, Sign in</p>
+                <p><a style="color: #ccc;" href="./signin.html">Hello, Sign in</a></p>
                 <h1>Account & Lists <img src="./assets/img/dropdown_icon.png" width="8px" alt=""></h1>
             </div>
             <div class="nav-text">
