--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In</title>
+    <title>Sign up</title>
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
@@ -16,17 +16,21 @@
     <link rel="stylesheet" href="./assets/font/stylesheet.css">
     <!-- reset css -->
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <!-- signin css -->
-    <link rel="stylesheet" href="./assets/css/signin.css">
+    <!-- signup css -->
+    <link rel="stylesheet" href="./assets/css/signup.css">
 </head>
 <body>
     <a href="">
         <img class="logo" src="./assets/img/amazon_logo_dark.png" width="100px" alt="">
     </a>
     <div class="signin-container">
-        <h1 class="signin-title">Sign in</h1>
-        <h5 class="input-lable">Email or mobile phone number</h5>
-        <input type="text">
+        <h1 class="signin-title">Sign up</h1>
+        <h5 class="input-lable">Your name</h5>
+        <input type="text" placeholder="First and last name">
+        <h5 class="input-lable">Mobile number or email</h5>
+        <input type="text" placeholder="Mobile number or email">
+        <h5 class="input-lable">Password</h5>
+        <input type="password" placeholder="Your password">
         <button>Continue</button>
         <p class="signin-condition">By continuing, you agree to Amazon's <span>Condition of Use</span> and <span>Privacy Notice</span></p>
         <p class="signin-help">&#9656 Need help ?</p>
@@ -36,11 +40,11 @@
     </div>
     <div class="signin-bottom">
         <hr>
-        <p>New to Amazon</p>
+        <p>Have an account ?</p>
         <hr>
     </div>
-    <a href="./signup.html">
-        <button class="signin-signup-btn">Creat your Amazon account</button>
+    <a href="./signin.html">
+        <button class="signin-signup-btn">Login with Amazon account</button>
     </a>
     
     <!-- footer -->
