--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <p>Return</p>
                 <h1>& Orthers</h1>
             </div>
+            <a href="./signin.html" class="mobile-user-icon">
+                <img src="./assets/img/user.png" alt="">
+            </a>
             <a href="./cart.html" class="nav-cart">
                 <img src="./assets/img/cart_icon.png" width="35px" alt="">
                 <h4>Cart</h4>
@@ -98,16 +101,38 @@
                 <a href="/">Shop more</a>
             </div>
             <div class="box-col">
-                <h3>Lunar New Year</h3>
-                <img src="./assets/img/box1-2.jpg" alt="">
+                <h3>Fashion Mart</h3>
+                <img src="./assets/img/box2-4.jpg" alt="">
                 <a href="/">Shop more</a>
-            </div><div class="box-col">
+            </div>
+            <div class="box-col">
+                <h3>Office chairs</h3>
+                <img src="./assets/img/box3-3.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
                 <h3>Toy under $25</h3>
                 <img src="./assets/img/box1-3.jpg" alt="">
                 <a href="/">Shop more</a>
-            </div><div class="box-col">
+            </div>
+            <div class="box-col">
                 <h3>Deals in PCs</h3>
                 <img src="./assets/img/box1-4.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Office chairs</h3>
+                <img src="./assets/img/box3-3.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Lunar New Year</h3>
+                <img src="./assets/img/box1-2.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Latest Devices</h3>
+                <img src="./assets/img/box2-2.jpg" alt="">
                 <a href="/">Shop more</a>
             </div>
         </div>
@@ -119,16 +144,38 @@
                 <a href="/">Shop more</a>
             </div>
             <div class="box-col">
-                <h3>Latest Devices</h3>
-                <img src="./assets/img/box2-2.jpg" alt="">
+                <h3>Gamming Monitor</h3>
+                <img src="./assets/img/box3-4.jpg" alt="">
                 <a href="/">Shop more</a>
-            </div><div class="box-col">
+            </div>
+            <div class="box-col">
                 <h3>Pets Food</h3>
                 <img src="./assets/img/box2-3.jpg" alt="">
                 <a href="/">Shop more</a>
-            </div><div class="box-col">
+            </div>
+            <div class="box-col">
                 <h3>Fashion Mart</h3>
                 <img src="./assets/img/box2-4.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Toy under $25</h3>
+                <img src="./assets/img/box1-3.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Grooming Products</h3>
+                <img src="./assets/img/box2-1.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Office chairs</h3>
+                <img src="./assets/img/box3-3.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Statinery</h3>
+                <img src="./assets/img/box3-1.jpg" alt="">
                 <a href="/">Shop more</a>
             </div>
         </div>
@@ -310,13 +357,35 @@
                 <h3>Laptops for study</h3>
                 <img src="./assets/img/box3-2.jpg" alt="">
                 <a href="/">Shop more</a>
-            </div><div class="box-col">
+            </div>
+            <div class="box-col">
                 <h3>Office chairs</h3>
                 <img src="./assets/img/box3-3.jpg" alt="">
                 <a href="/">Shop more</a>
-            </div><div class="box-col">
+            </div>
+            <div class="box-col">
                 <h3>Gamming Monitor</h3>
                 <img src="./assets/img/box3-4.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Grooming Products</h3>
+                <img src="./assets/img/box2-1.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Latest Devices</h3>
+                <img src="./assets/img/box2-2.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Fashion Mart</h3>
+                <img src="./assets/img/box2-4.jpg" alt="">
+                <a href="/">Shop more</a>
+            </div>
+            <div class="box-col">
+                <h3>Deals in PCs</h3>
+                <img src="./assets/img/box1-4.jpg" alt="">
                 <a href="/">Shop more</a>
             </div>
         </div>
